# xTea

./: .clang-format  CMakeLists.txt  README.md  conanfile.py  functions.cpp  functions.h  main.cpp  makefile  xTea.cpp  xTea.h  xTea_console.cpp
.github/workflows/: build-artifact.yml  build-release.yml  build_release.yml  c-cpp.yml
ci/: README.md  xTea.vcxproj
src/: xTea.cpp  xTea.h
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
